[package]
name = "rabbitmqtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "listen"
path = "src/listen.main.rs"

[[bin]]
name = "publish"
path = "src/publish.main.rs"


[dependencies]
lapin = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = {version="1.42.0", features=["full"]}
uuid = {version="1.11.0", features=["serde", "v4"]}
